--- a/Invoice cleaning.ipynb
+++ b/Invoice cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -42,8 +42,8 @@
     "import pandas as pd\n",
     "\n",
     "# Load client and invoice data\n",
-    "client_df = pd.read_csv(\"client.csv\")\n",
-    "invoice_df = pd.read_csv(\"invoice.csv\")\n",
+    "client_df = pd.read_csv(\"Data/client.csv\")\n",
+    "invoice_df = pd.read_csv(\"Data/invoice.csv\")\n",
     "\n",
     "# Preview\n",
     "print(client_df.head())\n",
