--- a/Invoice cleaning.ipynb
+++ b/Invoice cleaning.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Started with pandas.\n",
+    "Imported client and invoice datasets.\n",
+    "Check first few rows of these datasets."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -48,6 +57,47 @@
     "# Preview\n",
     "print(client_df.head())\n",
     "print(invoice_df.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we parse dates as datetime objects. \n",
+    "This ensures date data is processed correctly afterwards."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0   1994-12-31\n",
+      "1   2002-05-29\n",
+      "2   1986-03-13\n",
+      "3   1996-07-11\n",
+      "4   2014-10-14\n",
+      "Name: date, dtype: datetime64[ns]\n",
+      "0   2014-03-24\n",
+      "1   2013-03-29\n",
+      "2   2015-03-23\n",
+      "3   2015-07-13\n",
+      "4   2016-11-17\n",
+      "Name: date, dtype: datetime64[ns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert date columns to datetime\n",
+    "client_df['date'] = pd.to_datetime(client_df['date'])\n",
+    "invoice_df['date'] = pd.to_datetime(invoice_df['date'])\n",
+    "\n",
+    "print(client_df['date'].head())\n",
+    "print(invoice_df['date'].head())"
    ]
   }
  ],
