--- a/Data cleaning.ipynb
+++ b/Data cleaning.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -89,6 +89,16 @@
       "4   2016-11-17\n",
       "Name: date, dtype: datetime64[ns]\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/hx/f9l8cr254_905tmd749bc8sw0000gn/T/ipykernel_2977/413412218.py:2: UserWarning: Parsing dates in %d/%m/%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
+      "  client_df['date'] = pd.to_datetime(client_df['date'])\n",
+      "/var/folders/hx/f9l8cr254_905tmd749bc8sw0000gn/T/ipykernel_2977/413412218.py:3: UserWarning: Parsing dates in %d/%m/%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
+      "  invoice_df['date'] = pd.to_datetime(invoice_df['date'])\n"
+     ]
     }
    ],
    "source": [
@@ -98,6 +108,184 @@
     "\n",
     "print(client_df['date'].head())\n",
     "print(invoice_df['date'].head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We intend to classify clients, so we tried to summarise invoice data by client. For each client, we computed rough statistics such as the mean and sum for our focus on consumption levels."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    id  consommation_level_1_sum  consommation_level_1_mean  \\\n",
+      "0    0                     12334                 352.400000   \n",
+      "1    1                     20629                 557.540541   \n",
+      "2   10                     14375                 798.611111   \n",
+      "3   12                      5724                 357.750000   \n",
+      "4  100                        24                   1.200000   \n",
+      "\n",
+      "   consommation_level_1_max  consommation_level_1_std  \\\n",
+      "0                      1200                310.343472   \n",
+      "1                      1207                197.935960   \n",
+      "2                      2400                513.841374   \n",
+      "3                       925                232.908995   \n",
+      "4                        15                  3.607011   \n",
+      "\n",
+      "   consommation_level_2_sum  consommation_level_2_mean  \\\n",
+      "0                       370                  10.571429   \n",
+      "1                         0                   0.000000   \n",
+      "2                       682                  37.888889   \n",
+      "3                      1740                 108.750000   \n",
+      "4                         0                   0.000000   \n",
+      "\n",
+      "   consommation_level_2_max  consommation_level_2_std  \\\n",
+      "0                       186                 43.568935   \n",
+      "1                         0                  0.000000   \n",
+      "2                       682                160.748942   \n",
+      "3                       422                150.329194   \n",
+      "4                         0                  0.000000   \n",
+      "\n",
+      "   consommation_level_3_sum  consommation_level_3_mean  \\\n",
+      "0                         0                      0.000   \n",
+      "1                         0                      0.000   \n",
+      "2                         0                      0.000   \n",
+      "3                       266                     16.625   \n",
+      "4                         0                      0.000   \n",
+      "\n",
+      "   consommation_level_3_max  consommation_level_3_std  \\\n",
+      "0                         0                       0.0   \n",
+      "1                         0                       0.0   \n",
+      "2                         0                       0.0   \n",
+      "3                       266                      66.5   \n",
+      "4                         0                       0.0   \n",
+      "\n",
+      "   consommation_level_4_sum  consommation_level_4_mean  \\\n",
+      "0                         0                        0.0   \n",
+      "1                         0                        0.0   \n",
+      "2                         0                        0.0   \n",
+      "3                         0                        0.0   \n",
+      "4                         0                        0.0   \n",
+      "\n",
+      "   consommation_level_4_max  consommation_level_4_std   date_min   date_max  \\\n",
+      "0                         0                       0.0 2005-10-17 2019-03-19   \n",
+      "1                         0                       0.0 2005-10-19 2019-04-02   \n",
+      "2                         0                       0.0 2005-11-10 2019-05-02   \n",
+      "3                         0                       0.0 2011-10-08 2019-08-16   \n",
+      "4                         0                       0.0 2005-06-10 2012-09-25   \n",
+      "\n",
+      "   counter_statue_count  \n",
+      "0                    35  \n",
+      "1                    37  \n",
+      "2                    18  \n",
+      "3                    16  \n",
+      "4                    20  \n",
+      "    id  consommation_level_1_sum  consommation_level_1_mean  \\\n",
+      "0    0                     12334                 352.400000   \n",
+      "1    1                     20629                 557.540541   \n",
+      "2   10                     14375                 798.611111   \n",
+      "3   12                      5724                 357.750000   \n",
+      "4  100                        24                   1.200000   \n",
+      "\n",
+      "   consommation_level_1_max  consommation_level_1_std  \\\n",
+      "0                      1200                310.343472   \n",
+      "1                      1207                197.935960   \n",
+      "2                      2400                513.841374   \n",
+      "3                       925                232.908995   \n",
+      "4                        15                  3.607011   \n",
+      "\n",
+      "   consommation_level_2_sum  consommation_level_2_mean  \\\n",
+      "0                       370                  10.571429   \n",
+      "1                         0                   0.000000   \n",
+      "2                       682                  37.888889   \n",
+      "3                      1740                 108.750000   \n",
+      "4                         0                   0.000000   \n",
+      "\n",
+      "   consommation_level_2_max  consommation_level_2_std  \\\n",
+      "0                       186                 43.568935   \n",
+      "1                         0                  0.000000   \n",
+      "2                       682                160.748942   \n",
+      "3                       422                150.329194   \n",
+      "4                         0                  0.000000   \n",
+      "\n",
+      "   consommation_level_3_sum  consommation_level_3_mean  \\\n",
+      "0                         0                      0.000   \n",
+      "1                         0                      0.000   \n",
+      "2                         0                      0.000   \n",
+      "3                       266                     16.625   \n",
+      "4                         0                      0.000   \n",
+      "\n",
+      "   consommation_level_3_max  consommation_level_3_std  \\\n",
+      "0                         0                       0.0   \n",
+      "1                         0                       0.0   \n",
+      "2                         0                       0.0   \n",
+      "3                       266                      66.5   \n",
+      "4                         0                       0.0   \n",
+      "\n",
+      "   consommation_level_4_sum  consommation_level_4_mean  \\\n",
+      "0                         0                        0.0   \n",
+      "1                         0                        0.0   \n",
+      "2                         0                        0.0   \n",
+      "3                         0                        0.0   \n",
+      "4                         0                        0.0   \n",
+      "\n",
+      "   consommation_level_4_max  consommation_level_4_std   date_min   date_max  \\\n",
+      "0                         0                       0.0 2005-10-17 2019-03-19   \n",
+      "1                         0                       0.0 2005-10-19 2019-04-02   \n",
+      "2                         0                       0.0 2005-11-10 2019-05-02   \n",
+      "3                         0                       0.0 2011-10-08 2019-08-16   \n",
+      "4                         0                       0.0 2005-06-10 2012-09-25   \n",
+      "\n",
+      "   counter_statue_count  \n",
+      "0                    35  \n",
+      "1                    37  \n",
+      "2                    18  \n",
+      "3                    16  \n",
+      "4                    20  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Aggregating invoice data by client 'id'\n",
+    "invoice_by_id = invoice_df.groupby('id').agg({\n",
+    "    'consommation_level_1': ['sum', 'mean', 'max', 'std'],\n",
+    "    'consommation_level_2': ['sum', 'mean', 'max', 'std'],\n",
+    "    'consommation_level_3': ['sum', 'mean', 'max', 'std'],\n",
+    "    'consommation_level_4': ['sum', 'mean', 'max', 'std'],\n",
+    "    'date': ['min', 'max'],     # Add earliest and latest invoice date\n",
+    "    'counter_statue': 'count',  # How many invoices per client\n",
+    "}).reset_index()\n",
+    "\n",
+    "invoice_by_id.columns = ['_'.join(col).strip() if col[1] else col[0] for col in invoice_by_id.columns.values]\n",
+    "\n",
+    "print(invoice_by_id.head())\n",
+    "\n",
+    "invoice_by_id.to_csv(\"Data/invoice_by_id.csv\", index=False)\n",
+    "\n",
+    "# Preview the data\n",
+    "print(invoice_by_id.head())\n",
+    "\n",
+    "# Rename columns after aggregation\n",
+    "#invoice_agg.columns = ['id', \n",
+    "#                       'cons_level_1_sum', 'cons_level_1_mean', 'cons_level_1_max',\n",
+    "#                       'cons_level_2_sum', 'cons_level_2_mean', 'cons_level_2_max',\n",
+    "#                       'cons_level_3_sum', 'cons_level_3_mean', 'cons_level_3_max',\n",
+    "#                       'cons_level_4_sum', 'cons_level_4_mean', 'cons_level_4_max',\n",
+    "#                       'num_invoices']\n",
+    "\n",
+    "# Merge client_df and invoice_agg on 'id'\n",
+    "#merged_df = pd.merge(client_df, invoice_agg, on='id')\n",
+    "\n",
+    "# Preview merged data\n",
+    "#print(merged_df.head())\n"
    ]
   }
  ],
