--- a/Invoice cleaning.ipynb
+++ b/Invoice cleaning.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -75,19 +75,11 @@
       "4   2016-11-17\n",
       "Name: date, dtype: datetime64[ns]\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/hx/f9l8cr254_905tmd749bc8sw0000gn/T/ipykernel_7692/1043635998.py:2: UserWarning: Parsing dates in %d/%m/%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
-      "  invoice_df['date'] = pd.to_datetime(invoice_df['date'])\n"
-     ]
     }
    ],
    "source": [
     "# Convert date columns to datetime\n",
-    "invoice_df['date'] = pd.to_datetime(invoice_df['date'])\n",
+    "invoice_df['date'] = pd.to_datetime(invoice_df['date'], dayfirst=True)\n",
     "\n",
     "print(invoice_df['date'].head())"
    ]
@@ -101,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
