Added function docstrings and low variance filter

--- a/dim_reduc.ipynb
+++ b/dim_reduc.ipynb
@@ -41,7 +41,20 @@
     "        scale : bool = True,\n",
     "        OHE : bool = True\n",
     "        ) -> pd.DataFrame:\n",
-    "    '''For scaling and one-hot encoding dataframe'''\n",
+    "    \"\"\"\n",
+    "    For scaling and one-hot encoding dataframe.\n",
+    "\n",
+    "    Parameters:\n",
+    "        df (pd.DataFrame): The input DataFrame.\n",
+    "        response_col_name (str): Name of response column\n",
+    "        cat_col_names (list[str]): List of categorical column names to evaluate.\n",
+    "        num_col_names (list[str]): List of numeric column names to evaluate.\n",
+    "        scale (bool): Indicate if data should be scaled\n",
+    "        OHE (bool): Indicate if categorical variables should undergo One-Hot Encoding\n",
+    "\n",
+    "    Returns:\n",
+    "        pd.DataFrame: A DataFrame with columns scaled/One-Hot Encoded\n",
+    "    \"\"\"\n",
     "    \n",
     "    y = df[response_col_name].values # Response column\n",
     "    X_num = df[num_col_names].values # Numerical columns\n",
@@ -82,8 +95,23 @@
     "        response_col_name : str,\n",
     "        cat_col_names : list[str] = [], \n",
     "        num_col_names : list[str] = [],\n",
-    "        var : float = 0.95, logs : bool = False\n",
+    "        var : float = 0.95, \n",
+    "        logs : bool = False\n",
     "        ) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    For reducing the dimensions of a dataframe using PCA.\n",
+    "\n",
+    "    Parameters:\n",
+    "        df (pd.DataFrame): The input DataFrame.\n",
+    "        response_col_name (str): Name of response column\n",
+    "        cat_col_names (list[str]): List of categorical column names to evaluate.\n",
+    "        num_col_names (list[str]): List of numeric column names to evaluate.\n",
+    "        var (float): Proportion of variance that should be preserved\n",
+    "        logs (bool): Indicate if logs should be printed\n",
+    "\n",
+    "    Returns:\n",
+    "        pd.DataFrame: A DataFrame that has undergone PCA\n",
+    "    \"\"\"\n",
     "\n",
     "    y = df[response_col_name].values # Response column\n",
     "    X_num = df[num_col_names].values # Numerical columns\n",
@@ -118,7 +146,35 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def filter_low_variance(\n",
+    "        df: pd.DataFrame, \n",
+    "        num_col_names: list[str], \n",
+    "        threshold: float\n",
+    "        ) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Filter numeric columns based on a variance threshold.\n",
+    "\n",
+    "    Parameters:\n",
+    "        df (pd.DataFrame): The input DataFrame.\n",
+    "        num_col_names (list[str]): List of numeric column names to evaluate.\n",
+    "        threshold (float): The variance threshold for filtering columns.\n",
+    "\n",
+    "    Returns:\n",
+    "        pd.DataFrame: A DataFrame with low variance numeric columns removed.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Calculate the variance for each numeric column\n",
+    "    variances = df[num_col_names].var()\n",
+    "\n",
+    "    # Filter columns with variance greater than the threshold\n",
+    "    high_variance_cols = variances[variances > threshold].index.tolist()\n",
+    "\n",
+    "    # Create a new DataFrame with only the selected columns\n",
+    "    filtered_df = df[high_variance_cols]\n",
+    "\n",
+    "    return filtered_df"
+   ]
   }
  ],
  "metadata": {
