Added default threshold to low variance filter function

--- a/dim_reduc.ipynb
+++ b/dim_reduc.ipynb
@@ -150,7 +150,7 @@
     "def filter_low_variance(\n",
     "        df: pd.DataFrame, \n",
     "        num_col_names: list[str], \n",
-    "        threshold: float\n",
+    "        threshold: float = 0.1\n",
     "        ) -> pd.DataFrame:\n",
     "    \"\"\"\n",
     "    Filter numeric columns based on a variance threshold.\n",
@@ -167,7 +167,7 @@
     "    # Calculate the variance for each numeric column\n",
     "    variances = df[num_col_names].var()\n",
     "\n",
-    "    # Filter columns with variance greater than the threshold\n",
+    "    # Filter columns with variance greater than the threshold : default 0.1\n",
     "    high_variance_cols = variances[variances > threshold].index.tolist()\n",
     "\n",
     "    # Create a new DataFrame with only the selected columns\n",
