Added undersampling function

--- a/dim_reduc.ipynb
+++ b/dim_reduc.ipynb
@@ -175,6 +175,46 @@
     "\n",
     "    return filtered_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def undersample_data(\n",
+    "        df: pd.DataFrame, \n",
+    "        response_col_name : str\n",
+    "        ) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Perform undersampling to balance the classes in the dataset.\n",
+    "\n",
+    "    Parameters:\n",
+    "        df (pd.DataFrame): The input DataFrame containing the data.\n",
+    "        target_col (str): The name of the target column (class label).\n",
+    "\n",
+    "    Returns:\n",
+    "        pd.DataFrame: A balanced DataFrame with equal samples from both classes.\n",
+    "    \"\"\"\n",
+    "    # Separate the majority and minority classes\n",
+    "    majority_class = df[response_col_name].value_counts().idxmax()\n",
+    "    minority_class = df[response_col_name].value_counts().idxmin()\n",
+    "\n",
+    "    # Split the DataFrame into majority and minority\n",
+    "    df_majority = df[df[response_col_name] == majority_class]\n",
+    "    df_minority = df[df[response_col_name] == minority_class]\n",
+    "\n",
+    "    # Randomly sample from the majority class\n",
+    "    df_majority_sampled = df_majority.sample(n = len(df_minority), random_state = 42)\n",
+    "\n",
+    "    # Combine the minority class with the undersampled majority class\n",
+    "    df_balanced = pd.concat([df_majority_sampled, df_minority])\n",
+    "\n",
+    "    # Shuffle the resulting DataFrame\n",
+    "    df_balanced = df_balanced.sample(frac = 1, random_state = 42).reset_index(drop = True)\n",
+    "\n",
+    "    return df_balanced"
+   ]
   }
  ],
  "metadata": {
