Added proportion control to undersampling function

--- a/dim_reduc.ipynb
+++ b/dim_reduc.ipynb
@@ -184,17 +184,19 @@
    "source": [
     "def undersample_data(\n",
     "        df: pd.DataFrame, \n",
-    "        response_col_name : str\n",
+    "        response_col_name: str, \n",
+    "        proportion: float = 1\n",
     "        ) -> pd.DataFrame:\n",
     "    \"\"\"\n",
-    "    Perform undersampling to balance the classes in the dataset.\n",
+    "    Perform undersampling to balance the classes in the dataset based on a specified proportion.\n",
     "\n",
     "    Parameters:\n",
     "        df (pd.DataFrame): The input DataFrame containing the data.\n",
-    "        target_col (str): The name of the target column (class label).\n",
+    "        response_col_name (str): The name of the target column (class label).\n",
+    "        proportion (float): The desired ratio of minority to majority class samples (e.g., 0.5 for 1:2).\n",
     "\n",
     "    Returns:\n",
-    "        pd.DataFrame: A balanced DataFrame with equal samples from both classes.\n",
+    "        pd.DataFrame: A balanced DataFrame with samples from both classes according to the specified proportion.\n",
     "    \"\"\"\n",
     "    # Separate the majority and minority classes\n",
     "    majority_class = df[response_col_name].value_counts().idxmax()\n",
@@ -204,8 +206,15 @@
     "    df_majority = df[df[response_col_name] == majority_class]\n",
     "    df_minority = df[df[response_col_name] == minority_class]\n",
     "\n",
+    "    # Calculate the number of samples to take from the majority class\n",
+    "    n_minority = len(df_minority)\n",
+    "    n_majority = int(n_minority / proportion)\n",
+    "\n",
+    "    # Ensure we do not sample more than available\n",
+    "    n_majority = min(n_majority, len(df_majority))\n",
+    "\n",
     "    # Randomly sample from the majority class\n",
-    "    df_majority_sampled = df_majority.sample(n = len(df_minority), random_state = 42)\n",
+    "    df_majority_sampled = df_majority.sample(n = n_majority, random_state = 42)\n",
     "\n",
     "    # Combine the minority class with the undersampled majority class\n",
     "    df_balanced = pd.concat([df_majority_sampled, df_minority])\n",
