log_regression re-upload

--- a/log_regression.ipynb
+++ b/log_regression.ipynb
@@ -107,6 +107,13 @@
     "\n",
     "    return y_pred"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "testing\n"
+   ]
   }
  ],
  "metadata": {
