Added feature engineering functions

--- a/Data_Processing.ipynb
+++ b/Data_Processing.ipynb
@@ -81,7 +81,47 @@
    "outputs": [],
    "source": [
     "## Data Feature Engineering functions\n",
-    "\n"
+    "\n",
+    "def aggregate_invoice(df : pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Aggregate the invoice dataframe by id and generate features.\n",
+    "    Calculates sum, mean, max, and std for each consommation_level\n",
+    "    and counts number of invoices under each id.\n",
+    "    \"\"\"\n",
+    "    df = df.groupby('id').agg({ # Aggregate by id\n",
+    "        # Calculate sum, mean, max, and std for each consm_level\n",
+    "        'consommation_level_1': ['sum', 'mean', 'max', 'std'],\n",
+    "        'consommation_level_2': ['sum', 'mean', 'max', 'std'],\n",
+    "        'consommation_level_3': ['sum', 'mean', 'max', 'std'],\n",
+    "        'consommation_level_4': ['sum', 'mean', 'max', 'std'],\n",
+    "        'counter_statue': 'count', # Count number of invoices\n",
+    "    }).reset_index()\n",
+    "    df.columns = [\n",
+    "        # Join by _ if more than 2 parts to the column name exists\n",
+    "        '_'.join(col).strip() if col[1] \n",
+    "        else col[0] # Else use original name\n",
+    "        for col in df.columns.values # For each column name value\n",
+    "    ]\n",
+    "    return df\n",
+    "\n",
+    "def manual_fix_names(\n",
+    "        df : pd.DataFrame,\n",
+    "        new_col_names : list[str]\n",
+    "        ) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Manually sets the column names of a dataframe.\n",
+    "    \"\"\"\n",
+    "    df.columns = new_col_names\n",
+    "    return df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## "
    ]
   }
  ],
