Added data joining functions

--- a/Data_Processing.ipynb
+++ b/Data_Processing.ipynb
@@ -121,7 +121,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## "
+    "## Data Joining functions\n",
+    "\n",
+    "def merge(\n",
+    "        client_df : pd.DataFrame,\n",
+    "        invoice_df : pd.DataFrame,\n",
+    "        merge_by : str = \"id\"\n",
+    "        ) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Merges two dataframes.\n",
+    "    Merges on 'id' column by default (for client and invoice).\n",
+    "    \"\"\"\n",
+    "    merged_df = pd.merge(\n",
+    "        client_df, invoice_df, on = merge_by)\n",
+    "    return merged_df\n"
    ]
   }
  ],
