Added PCA and Low variance filter to workflow

--- a/Data_Processing.ipynb
+++ b/Data_Processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,8 +284,8 @@
     "    return df_modified\n",
     "\n",
     "def filter_low_variance(\n",
-    "        df: pd.DataFrame, \n",
-    "        num_col_names: list[str], \n",
+    "        df : pd.DataFrame, \n",
+    "        response_col_name : str,\n",
     "        threshold: float = 0.1\n",
     "        ) -> pd.DataFrame:\n",
     "    \"\"\"\n",
@@ -293,18 +293,29 @@
     "\n",
     "    Parameters:\n",
     "        df (pd.DataFrame): The input DataFrame.\n",
-    "        num_col_names (list[str]): List of numeric column names to evaluate.\n",
+    "        response_col_name (str): Name of response column\n",
     "        threshold (float): The variance threshold for filtering columns.\n",
     "\n",
     "    Returns:\n",
     "        pd.DataFrame: A DataFrame with low variance numeric columns removed.\n",
     "    \"\"\"\n",
     "    \n",
+    "    # Identify numerical columns \n",
+    "    # by excluding response column\n",
+    "    num_col_names = [\n",
+    "        col for col in df.columns \n",
+    "        if col != response_col_name\n",
+    "    ]\n",
+    "\n",
     "    # Calculate the variance for each numeric column\n",
     "    variances = df[num_col_names].var()\n",
     "\n",
+    "    # Keep response column\n",
+    "    high_variance_cols = [response_col_name]\n",
+    "\n",
     "    # Filter columns with variance greater than the threshold : default 0.1\n",
-    "    high_variance_cols = variances[variances > threshold].index.tolist()\n",
+    "    cols_to_keep = variances[variances > threshold].index.tolist()\n",
+    "    high_variance_cols.extend(cols_to_keep)\n",
     "\n",
     "    # Create a new DataFrame with only the selected columns\n",
     "    filtered_df = df[high_variance_cols]\n",
@@ -314,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,28 +365,26 @@
     "        response_col_name = 'target',\n",
     "        cat_col_names = categorical_column_names\n",
     "    )\n",
-    "    print(df.columns.values)\n",
     "    df = principal_component_analysis(\n",
     "        df = df,\n",
     "        response_col_name = 'target'\n",
     "    )\n",
-    "    print(df.columns.values)\n",
-    "    print(df.head())\n",
-    "\n"
+    "    df = filter_low_variance(df, response_col_name = 'target')\n",
+    "    print(df.head())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Siah Jin Thau\\AppData\\Local\\Temp\\ipykernel_4076\\3343288833.py:11: UserWarning: Parsing dates in %d/%m/%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
+      "C:\\Users\\Siah Jin Thau\\AppData\\Local\\Temp\\ipykernel_11516\\3343288833.py:11: UserWarning: Parsing dates in %d/%m/%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
       "  df['date'] = pd.to_datetime(df['date'])\n",
-      "C:\\Users\\Siah Jin Thau\\AppData\\Local\\Temp\\ipykernel_4076\\3343288833.py:11: UserWarning: Parsing dates in %d/%m/%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
+      "C:\\Users\\Siah Jin Thau\\AppData\\Local\\Temp\\ipykernel_11516\\3343288833.py:11: UserWarning: Parsing dates in %d/%m/%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
       "  df['date'] = pd.to_datetime(df['date'])\n"
      ]
     },
@@ -385,47 +394,33 @@
      "text": [
       "No duplicates found!\n",
       "Duplicates found! Cleaning them up...\n",
-      "['date' 'cons_level_1_sum' 'cons_level_1_mean' 'cons_level_1_max'\n",
-      " 'cons_level_1_std' 'cons_level_2_sum' 'cons_level_2_mean'\n",
-      " 'cons_level_2_max' 'cons_level_2_std' 'cons_level_3_sum'\n",
-      " 'cons_level_3_mean' 'cons_level_3_max' 'cons_level_3_std'\n",
-      " 'cons_level_4_sum' 'cons_level_4_mean' 'cons_level_4_max'\n",
-      " 'cons_level_4_std' 'date_sum' 'date_mean' 'date_max' 'date_std'\n",
-      " 'num_invoices' 'region_103' 'region_104' 'region_105' 'region_106'\n",
-      " 'region_107' 'region_206' 'region_301' 'region_302' 'region_303'\n",
-      " 'region_304' 'region_305' 'region_306' 'region_307' 'region_308'\n",
-      " 'region_309' 'region_310' 'region_311' 'region_312' 'region_313'\n",
-      " 'region_371' 'region_372' 'region_379' 'region_399' 'dis_62' 'dis_63'\n",
-      " 'dis_69' 'catg_12' 'catg_51' 'target']\n",
-      "['PC1' 'PC2' 'PC3' 'PC4' 'PC5' 'PC6' 'PC7' 'PC8' 'PC9' 'PC10' 'PC11'\n",
-      " 'PC12' 'PC13' 'PC14' 'PC15' 'PC16' 'target']\n",
-      "        PC1       PC2       PC3       PC4       PC5       PC6       PC7  \\\n",
-      "0 -0.156303  1.455693 -0.289557 -0.772065  0.427308 -0.713407  0.381298   \n",
-      "1  0.184205  1.865908 -0.485605 -0.742034  0.395662 -0.369473 -0.078411   \n",
-      "2 -0.009460  1.080616  0.426119  0.216862  1.281985 -0.362985  0.522426   \n",
-      "3 -1.511789 -0.864854  0.245968 -0.411237  0.052633 -1.270572  0.218413   \n",
-      "4  0.776524 -0.929508 -0.486357  1.165433 -1.434792  0.799974 -0.808864   \n",
+      "  target       PC1       PC2       PC3       PC4       PC5       PC6  \\\n",
+      "0      0 -0.156303  1.455693 -0.289557 -0.772065  0.427308 -0.713407   \n",
+      "1      0  0.184205  1.865908 -0.485605 -0.742034  0.395662 -0.369473   \n",
+      "2      0 -0.009460  1.080616  0.426119  0.216862  1.281985 -0.362985   \n",
+      "3      0 -1.511789 -0.864854  0.245968 -0.411237  0.052633 -1.270572   \n",
+      "4      0  0.776524 -0.929508 -0.486357  1.165433 -1.434792  0.799974   \n",
       "\n",
-      "        PC8       PC9      PC10      PC11      PC12      PC13      PC14  \\\n",
-      "0 -0.260961  0.091013  0.154409  0.093105 -0.111642  0.133808 -0.058840   \n",
-      "1  0.258837 -0.098360 -0.055175 -0.107078 -0.968826 -0.449584 -0.201366   \n",
-      "2 -1.629008  1.020376 -0.377531 -0.097228  0.053216 -0.347132  0.112169   \n",
-      "3 -0.048031 -0.276486  0.404534  0.517248 -0.448144 -0.285221 -0.006446   \n",
-      "4 -0.599817 -0.128966 -0.757656 -0.082450  0.644964 -0.201014 -0.354725   \n",
+      "        PC7       PC8       PC9      PC10      PC11      PC12      PC13  \\\n",
+      "0  0.381298 -0.260961  0.091013  0.154409  0.093105 -0.111642  0.133808   \n",
+      "1 -0.078411  0.258837 -0.098360 -0.055175 -0.107078 -0.968826 -0.449584   \n",
+      "2  0.522426 -1.629008  1.020376 -0.377531 -0.097228  0.053216 -0.347132   \n",
+      "3  0.218413 -0.048031 -0.276486  0.404534  0.517248 -0.448144 -0.285221   \n",
+      "4 -0.808864 -0.599817 -0.128966 -0.757656 -0.082450  0.644964 -0.201014   \n",
       "\n",
-      "       PC15      PC16 target  \n",
-      "0 -0.068390  0.081431      0  \n",
-      "1  0.072139  0.486190      0  \n",
-      "2  0.130270  0.046122      0  \n",
-      "3 -0.179386  0.047138      0  \n",
-      "4 -0.212332 -0.167950      0  \n"
+      "       PC14      PC15      PC16  \n",
+      "0 -0.058840 -0.068390  0.081431  \n",
+      "1 -0.201366  0.072139  0.486190  \n",
+      "2  0.112169  0.130270  0.046122  \n",
+      "3 -0.006446 -0.179386  0.047138  \n",
+      "4 -0.354725 -0.212332 -0.167950  \n"
      ]
     }
    ],
    "source": [
     "## Run to execute main workflow\n",
     "\n",
-    "main()"
+    "main()\n"
    ]
   }
  ],
