Added heatmap function

--- a/Data_Processing.ipynb
+++ b/Data_Processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,9 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.decomposition import PCA\n",
-    "from sklearn.preprocessing import StandardScaler, OneHotEncoder"
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "import seaborn as sns \n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -321,6 +323,40 @@
     "    filtered_df = df[high_variance_cols]\n",
     "\n",
     "    return filtered_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Data Visualisation functions\n",
+    "\n",
+    "def viz_heatmap(\n",
+    "        df : pd.DataFrame,\n",
+    "        excluded_cols : list[str]\n",
+    "        ) -> None:\n",
+    "    \"\"\"\n",
+    "    Plots a Correlation Heatmap.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Identify desired columns \n",
+    "    # by excluding undesired column\n",
+    "    col_names = [\n",
+    "        col for col in df.columns \n",
+    "        if col not in excluded_cols\n",
+    "    ]\n",
+    "\n",
+    "    X = df[col_names]\n",
+    "\n",
+    "    corr_matrix = X.corr()\n",
+    "    plt.figure(figsize=(10, 8))\n",
+    "    sns.heatmap(\n",
+    "        corr_matrix, annot = True, cmap = 'coolwarm', fmt = '.2f'\n",
+    "    )\n",
+    "    plt.title('Correlation Heatmap')\n",
+    "    plt.show()\n"
    ]
   },
   {
